added the possibility to create an account and authenticate
