# src/models/users.ts
@@ -1,17 +1,28 @@
-import { DataTypes, Optional} from "sequelize";
+import { DataTypes} from "sequelize";
+const bcrypt = require('bcrypt');
 const db  =  require("../configs/database");
 
 interface IUsers {
     id : number;
     name : string;
     email : string;
+    password : string;
     profile_picture ?: string | null ;
     createdAt?: Date;
     updatedAt?: Date;
 }
 
-export interface IUsersInput extends Optional<IUsers, 'id'>{}
-export interface IUsersOutput extends Required<IUsers>{}
+interface IUsersInput extends Pick<IUsers, 'name' | 'email' | 'password'>{}
+interface IUsersOutput extends Required<IUsers>{}
+
+interface IUsersLogin extends Pick<IUsers, 'email' | 'password'>{}
+interface IUsersLoginOutput {
+    message: string;
+    httpCode:number;
+    token?: string;
+    name?: string;
+    profile_picture?: string | null
+}
 
 const users = db.define('users',{
     id:{
@@ -20,17 +31,40 @@ const users = db.define('users',{
         primaryKey: true,
     },
     name:{
-        type: new DataTypes.STRING(128),
+        type: DataTypes.STRING(128),
         allowNull: false,
     },
     email:{
-        type: new DataTypes.STRING(320),
+        type: DataTypes.STRING(320),
         allowNull: false,
+        unique: true,
+    },
+    password:{
+        type: DataTypes.STRING(),
+        allowNull: false,
+
+
     },
     profile_picture:{
-        type: new DataTypes.STRING,
+        type: DataTypes.STRING,
         allowNull: true,
-    },
-    
+    }
+ 
 })
-module.exports =  users;
+
+users.beforeCreate(async (user : IUsers)=> {
+    const salt = await bcrypt.genSalt(10);
+    user.password = await bcrypt.hash(user.password, salt)
+})
+
+users.prototype.validPassword = async function (password : string){
+    return await bcrypt.compare(password, this.password);
+}
+
+module.exports =users;
+export {
+    IUsersOutput,
+    IUsersInput,
+    IUsersLogin,
+    IUsersLoginOutput
+};
